<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test Talf</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sel_file">Cargar fichero de preguntas</string>
    <string name="examen_20">20 preguntas</string>
    <string name="examen_40">40 preguntas</string>
    <string name="texto_inicio_examen">Empezar examen</string>
    <string name="titulo_inicial">Sel. un fichero para comenzar el examen</string>
    <string name="title_activity_activity_examen">Examen Test Talf</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="puntosText">10</string>
    <string name="title_activity_activity_resultado">Resultado Test Talf</string><string name="titulo_resultado_test">Resultado:</string><string name="resul">Aprobado / Suspenso</string><string name="puntos_0">0</string><string name="puntos_mostrar">10</string><string name="boton_nc">NC</string><string name="bot_nc">NC</string><string name="textCreadoPor">Creado por David Rando</string><string name="textPreguntas30">30 preguntas</string><string name="textAnterior">La pregunta anterior se mostrará aqui</string><string name="txt_examen">Simulador Examen</string><string name="txt_mostrar_puntuacion">Nota solo al final</string><string name="textoFalladas">Preguntas Erroneas</string><string name="textoAhoraNoContest">NC pendientes</string>

</resources>
