<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sel_file"
            android:id="@id/b_selfile"
            android:layout_marginTop="73dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@id/tit_pregunta"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examen_20"
            android:id="@id/radio_preg_20"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examen_40"
            android:id="@id/radio_preg_40"
            android:singleLine="false"
            android:layout_below="@id/radio_preg_20"
            android:layout_alignLeft="@id/radio_preg_20"
            android:layout_marginTop="21dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_inicio_examen"
            android:id="@id/inicio_examen"
            android:layout_marginTop="30dp"
            android:layout_below="@id/radio_preg_40"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>
